--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: weekly
     open-pull-requests-limit: 10
-    versioning-strategy: lockfile-only
+    versioning-strategy: increase
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
